GRAMMAR.ebnf
# Ora Language Grammar (EBNF)
# Version: 0.2.0 (Revised)
# Description: EBNF form aligned with GRAMMAR.bnf

# ==========================================
# PROGRAM STRUCTURE
# ==========================================

Program = { TopLevelDeclaration } ;

TopLevelDeclaration =
    ContractDeclaration
  | FunctionDeclaration
  | VariableDeclaration
  | StructDeclaration
  | BitfieldDeclaration
  | EnumDeclaration
  | LogDeclaration
  | ImportDeclaration
  | ErrorDeclaration
  | GhostDeclaration ;

# ==========================================
# IMPORT DECLARATIONS
# ==========================================

ImportDeclaration =
    "const" Identifier "=" "@" "import" "(" StringLiteral ")" ";"
  | "comptime" "const" Identifier "=" "@" "import" "(" StringLiteral ")" ";" ;

# ==========================================
# CONTRACT DECLARATIONS
# ==========================================

ContractDeclaration = "contract" Identifier "{" { ContractMember } "}" ;

ContractMember =
    VariableDeclaration
  | FunctionDeclaration
  | LogDeclaration
  | StructDeclaration
  | BitfieldDeclaration
  | EnumDeclaration
  | ErrorDeclaration
  | GhostDeclaration
  | ContractInvariant ;

# ==========================================
# FUNCTION DECLARATIONS
# ==========================================

FunctionDeclaration = [ "pub" ]
  "fn" FunctionName "(" [ ParameterList ] ")" [ ReturnType ]
  { RequiresClause } { EnsuresClause } Block ;

FunctionName = Identifier | "init" ;

ParameterList = Parameter { "," Parameter } ;

Parameter = Identifier ":" Type ;

ReturnType = "->" Type ;

RequiresClause = "requires" "(" Expression ")" ;
EnsuresClause  = "ensures"  "(" Expression ")" ;

# ==========================================
# VARIABLE DECLARATIONS
# ==========================================

VariableDeclaration = [ MemoryRegion ] VariableKind Identifier
  [ ":" Type ] [ "=" Expression ] ";" ;

MemoryRegion = "storage" | "memory" | "tstore" ;

VariableKind = "var" | "let" | "const" | "immutable" ;

# ==========================================
# STRUCT DECLARATIONS
# ==========================================

StructDeclaration = "struct" Identifier "{" { StructMember } "}" ;

StructMember = Identifier ":" Type ";" ;

# ==========================================
# BITFIELD DECLARATIONS
# ==========================================

BitfieldDeclaration = "bitfield" Identifier ":" Type "{" { BitfieldField } "}" ;

BitfieldField = Identifier ":" Type [ BitfieldLayout ] ";" ;

BitfieldLayout = "@at" "(" IntegerLiteral "," IntegerLiteral ")"
               | "@bits" "(" IntegerLiteral ".." IntegerLiteral ")"
               | "(" IntegerLiteral ")" ;

# ==========================================
# ENUM DECLARATIONS
# ==========================================

EnumDeclaration = "enum" Identifier [ ":" Type ] "{" [ EnumMemberList ] "}" ;

EnumMemberList = EnumMember { "," EnumMember } [ "," ] ;

EnumMember = Identifier [ "=" Expression ] ;

# ==========================================
# LOG DECLARATIONS (EVENTS)
# ==========================================

LogDeclaration = "log" Identifier "(" [ LogParameterList ] ")" ";" ;

LogParameterList = LogParameter { "," LogParameter } ;

LogParameter = [ "indexed" ] Identifier ":" Type ;

# ==========================================
# ERROR DECLARATIONS
# ==========================================

ErrorDeclaration = "error" Identifier [ "(" [ ParameterList ] ")" ] ";" ;

# ==========================================
# FORMAL VERIFICATION DECLARATIONS
# ==========================================

# Ghost declarations (specification-only code)
GhostDeclaration = "ghost" ( VariableDeclaration | FunctionDeclaration | Block ) ;

# Contract invariants (class invariants)
ContractInvariant = "invariant" Identifier "(" Expression ")" ";" ;

# ==========================================
# TYPE SYSTEM
# ==========================================

Type =
    ErrorUnionType
  | PlainType ;

PlainType =
    PrimitiveType
  | MapType
  | ArrayType
  | SliceType
  | AnonymousStructType
  | Identifier ;

# Error unions are expressed as !T | E1 | E2 ...
ErrorUnionType = "!" PlainType { "|" PlainType } ;

PrimitiveType =
    "u8" | "u16" | "u32" | "u64" | "u128" | "u256"
  | "i8" | "i16" | "i32" | "i64" | "i128" | "i256"
  | "bool" | "address" | "string" | "bytes" | "void" ;

MapType       = "map" "<" Type "," Type ">" ;

# Arrays and slices
ArrayType = "[" Type ";" IntegerLiteral "]" ;           # [T; N]
SliceType = "slice" "[" Type "]" ;                      # slice[T]

AnonymousStructType = "struct" "{" AnonymousStructFieldList "}" ;
AnonymousStructFieldList = AnonymousStructField { "," AnonymousStructField } ;
AnonymousStructField = Identifier ":" Type ;

# ==========================================
# STATEMENTS
# ==========================================

Statement =
    VariableDeclaration
  | AssignmentStatement
  | CompoundAssignmentStatement
  | DestructuringAssignment
  | ExpressionStatement
  | IfStatement
  | WhileStatement
  | ForStatement
  | SwitchStatement
  | ReturnStatement
  | BreakStatement
  | ContinueStatement
  | LogStatement
  | LockStatement
  | UnlockStatement
  | TryStatement
  | AssertStatement
  | LabeledBlock
  | Block ;

AssignmentStatement         = LValue "="  Expression ";" ;
CompoundAssignmentStatement = LValue CompoundOperator Expression ";" ;
CompoundOperator            = "+=" | "-=" | "*=" | "/=" | "%=" ;

DestructuringAssignment = "let" DestructuringPattern "=" Expression ";" ;
DestructuringPattern    = "." "{" DestructuringFieldList "}" ;
DestructuringFieldList  = DestructuringField { "," DestructuringField } ;
DestructuringField      = Identifier | ( Identifier ":" Identifier ) ;

ExpressionStatement  = Expression ";" ;

IfStatement    = "if"    "(" Expression ")" Statement [ "else" Statement ] ;

# Formal verification: Loop invariants
WhileStatement = "while" "(" Expression ")" { InvariantClause } Statement ;
ForStatement = "for" "(" Expression ")" "|" ForPattern "|" { InvariantClause } Statement ;
ForPattern = Identifier [ "," Identifier ] | DestructuringPattern ;
InvariantClause = "invariant" "(" Expression ")" ;

ReturnStatement   = "return" [ Expression ] ";" ;
BreakStatement    = "break"  [ ":" Identifier [ Expression ] ] ";" ;
ContinueStatement = "continue" [ ":" Identifier ] ";" ;

LogStatement    = "log" Identifier "(" [ ExpressionList ] ")" ";" ;
LockStatement   = "@" "lock"   "(" Expression ")" ";" ;
UnlockStatement = "@" "unlock" "(" Expression ")" ";" ;

# Formal verification: Assertions
AssertStatement = "assert" "(" Expression [ "," StringLiteral ] ")" ";" ;

TryStatement = "try" Block [ "catch" [ "(" Identifier ")" ] Block ] ;

Block        = "{" { Statement } "}" ;
LabeledBlock = Identifier ":" Block ;

# ==========================================
# SWITCH STATEMENTS AND EXPRESSIONS
# ==========================================

SwitchStatement   = "switch" "(" Expression ")" "{" { SwitchArm } "}" ;
SwitchExpression  = "switch" "(" Expression ")" "{" { SwitchExprArm } "}" ;

SwitchArm    = SwitchPattern "=>" SwitchBody [ "," ] ;
SwitchExprArm = SwitchPattern "=>" Expression [ "," ] ;

# Patterns
SwitchPattern = Expression | RangePattern | "else" ;
RangePattern  = Expression "..." Expression ;

SwitchBody = ( Expression ";" ) | Block ;

# ==========================================
# EXPRESSIONS (precedence)
# ==========================================

Expression = AssignmentExpression ;

AssignmentExpression = LogicalOrExpression [ AssignmentOperator LogicalOrExpression ] ;
AssignmentOperator   = "=" | "+=" | "-=" | "*=" | "/=" | "%=" ;

LogicalOrExpression  = LogicalAndExpression { "||" LogicalAndExpression } ;
LogicalAndExpression = BitwiseOrExpression  { "&&" BitwiseOrExpression } ;
BitwiseOrExpression  = BitwiseXorExpression { "|"  BitwiseXorExpression } ;
BitwiseXorExpression = BitwiseAndExpression { "^"  BitwiseAndExpression } ;
BitwiseAndExpression = EqualityExpression   { "&"  EqualityExpression } ;

EqualityExpression   = RelationalExpression { ( "==" | "!=" ) RelationalExpression } ;
RelationalExpression = ShiftExpression      { ( "<" | "<=" | ">" | ">=" ) ShiftExpression } ;
ShiftExpression      = AdditiveExpression   { ( "<<" | ">>" | "<<%" | ">>%" ) AdditiveExpression } ;
AdditiveExpression   = MultiplicativeExpression { ( "+" | "-" | "+%" | "-%" ) MultiplicativeExpression } ;
MultiplicativeExpression = UnaryExpression { ( "*" | "/" | "%" | "*%" ) UnaryExpression } ;

UnaryExpression   = { ( "!" | "-" | "+" ) } PostfixExpression ;
PostfixExpression = PrimaryExpression { PostfixOperator } ;

# Valid assignment target
LValue = LValueAtom { LValueSuffix } ;
LValueAtom = Identifier | "(" LValue ")" ;
LValueSuffix = "." Identifier | "[" Expression "]" ;

PostfixOperator =
    "." Identifier
  | "[" Expression "]"
  | "(" [ ExpressionList ] ")" ;  (* Function call *)

PrimaryExpression =
    Literal
  | Identifier
  | "(" Expression ")"
  | TryExpression
  | OldExpression
  | ComptimeExpression
  | CastExpression
  | ErrorExpression
  | QuantifiedExpression
  | AnonymousStructLiteral
  | SwitchExpression
  | ArrayLiteral ;

ArrayLiteral = "[" [ ExpressionList ] "]" ;

OldExpression      = "old" "(" Expression ")" ;
ComptimeExpression = "comptime" Block ;
CastExpression     = "@" "cast" "(" Type "," Expression ")" ;
ErrorExpression    = "error" "." Identifier [ "(" [ ExpressionList ] ")" ] ;

# Formal verification: Quantified expressions
QuantifiedExpression = Quantifier Identifier ":" Type [ "where" Expression ] "=>" Expression ;
Quantifier = "forall" | "exists" ;

AnonymousStructLiteral = "." "{" [ AnonymousStructLiteralFieldList ] "}" ;
AnonymousStructLiteralFieldList = AnonymousStructLiteralField { "," AnonymousStructLiteralField } [ "," ] ;
AnonymousStructLiteralField = "." Identifier "=" Expression ;

ExpressionList = Expression { "," Expression } ;

# ==========================================
# LITERALS
# ==========================================

Literal = IntegerLiteral | StringLiteral | BooleanLiteral | AddressLiteral | HexLiteral ;

IntegerLiteral = Digit { Digit | "_" } ;
StringLiteral  = '"' { '\\' ( '"' | '\\' ) | ( Character - '"' - '\\' ) } '"' ;
BooleanLiteral = "true" | "false" ;
AddressLiteral = "0x" HexDigit { HexDigit } ;
HexLiteral     = "0x" HexDigit { HexDigit } ;

# ==========================================
# LEXICAL ELEMENTS
# ==========================================

Identifier = ( Letter | "_" ) { Letter | Digit | "_" } ;

Letter   = ? any alphabetic character ? ;
Digit    = ? '0' .. '9' ? ;
HexDigit = ? Digit | 'a'..'f' | 'A'..'F' ? ;
Character = ? any valid Unicode character ? ;
TryExpression = "try" Expression ;
